styled dropdown and newsletter alignment fix

--- a/src/styles/global/_base.scss
+++ b/src/styles/global/_base.scss
@@ -5,6 +5,10 @@ html, body {
   max-width: 1690px;
 }
 
+input, select, textarea, submit, button {
+  @include baseFont();
+}
+
 * {
   box-sizing: border-box;
 }
