--- a/src/styles/modules/_newsletter.scss
+++ b/src/styles/modules/_newsletter.scss
@@ -48,6 +48,7 @@
       list-style: none;
       display: flex;
       justify-content: flex-start;
+      align-items: center;
       width: auto;
       padding: 0;
       margin: 25px 0;
